// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin common/assets.js 1`] = `
"//#region ../../../../../../../../uni_modules/test-component/static/logo-hx.png
var logo_hx_default$1 = "/sub/uni_modules/test-component/static/logo-hx.png";
//#endregion
//#region src/uni_modules/test-module/static/logo-hx.png
var logo_hx_default = "/sub/uni_modules/test-module/static/logo-hx.png";
//#endregion
//#region src/static/logo.png
var logo_default$1 = "/sub/static/logo.png";
//#endregion
//#region ../../../../../../../../static/logo.png
var logo_default = "/sub/static/logo.png";
//#endregion
//#region src/pages/index/logo-dc.png
var logo_dc_default = "/sub/assets/logo-dc.759742f5.png";
//#endregion
Object.defineProperty(exports, "logo_dc_default", {
	enumerable: true,
	get: function() {
		return logo_dc_default;
	}
});
Object.defineProperty(exports, "logo_default", {
	enumerable: true,
	get: function() {
		return logo_default;
	}
});
Object.defineProperty(exports, "logo_default$1", {
	enumerable: true,
	get: function() {
		return logo_default$1;
	}
});
Object.defineProperty(exports, "logo_hx_default", {
	enumerable: true,
	get: function() {
		return logo_hx_default;
	}
});
Object.defineProperty(exports, "logo_hx_default$1", {
	enumerable: true,
	get: function() {
		return logo_hx_default$1;
	}
});
"
`;

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
.test {
    background-color: red;
}"
`;

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `
".test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
.test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin common/assets.js 1`] = `
"//#region ../../../../../../../../uni_modules/test-component/static/logo-hx.png
var logo_hx_default$1 = "/sub/uni_modules/test-component/static/logo-hx.png";
//#endregion
//#region src/uni_modules/test-module/static/logo-hx.png
var logo_hx_default = "/sub/uni_modules/test-module/static/logo-hx.png";
//#endregion
//#region src/static/logo.png
var logo_default$1 = "/sub/static/logo.png";
//#endregion
//#region ../../../../../../../../static/logo.png
var logo_default = "/sub/static/logo.png";
//#endregion
//#region src/pages/index/logo-dc.png
var logo_dc_default = "/sub/assets/logo-dc.759742f5.png";
//#endregion
Object.defineProperty(exports, "logo_dc_default", {
	enumerable: true,
	get: function() {
		return logo_dc_default;
	}
});
Object.defineProperty(exports, "logo_default", {
	enumerable: true,
	get: function() {
		return logo_default;
	}
});
Object.defineProperty(exports, "logo_default$1", {
	enumerable: true,
	get: function() {
		return logo_default$1;
	}
});
Object.defineProperty(exports, "logo_hx_default", {
	enumerable: true,
	get: function() {
		return logo_hx_default;
	}
});
Object.defineProperty(exports, "logo_hx_default$1", {
	enumerable: true,
	get: function() {
		return logo_hx_default$1;
	}
});
"
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
.test {
    background-color: red;
}"
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `
".test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
.test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin common/assets.js 1`] = `
"//#region ../../../../../../../../uni_modules/test-component/static/logo-hx.png
var logo_hx_default$1 = "/sub/uni_modules/test-component/static/logo-hx.png";
//#endregion
//#region src/uni_modules/test-module/static/logo-hx.png
var logo_hx_default = "/sub/uni_modules/test-module/static/logo-hx.png";
//#endregion
//#region src/static/logo.png
var logo_default$1 = "/sub/static/logo.png";
//#endregion
//#region ../../../../../../../../static/logo.png
var logo_default = "/sub/static/logo.png";
//#endregion
//#region src/pages/index/logo-dc.png
var logo_dc_default = "/sub/assets/logo-dc.759742f5.png";
//#endregion
Object.defineProperty(exports, "logo_dc_default", {
	enumerable: true,
	get: function() {
		return logo_dc_default;
	}
});
Object.defineProperty(exports, "logo_default", {
	enumerable: true,
	get: function() {
		return logo_default;
	}
});
Object.defineProperty(exports, "logo_default$1", {
	enumerable: true,
	get: function() {
		return logo_default$1;
	}
});
Object.defineProperty(exports, "logo_hx_default", {
	enumerable: true,
	get: function() {
		return logo_hx_default;
	}
});
Object.defineProperty(exports, "logo_hx_default$1", {
	enumerable: true,
	get: function() {
		return logo_hx_default$1;
	}
});
"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
@import "../../uvue.wxss";
:host{display:flex;flex-direction:column}

.test {
    background-color: red;
}"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `
":host{display:flex;flex-direction:column}

.test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
@import "../../../../uvue.wxss";
:host{display:flex;flex-direction:column}

.test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin common/assets.js 1`] = `
"//#region ../../../../../../../../uni_modules/test-component/static/logo-hx.png
var logo_hx_default$1 = "/sub/uni_modules/test-component/static/logo-hx.png";
//#endregion
//#region src/uni_modules/test-module/static/logo-hx.png
var logo_hx_default = "/sub/uni_modules/test-module/static/logo-hx.png";
//#endregion
//#region src/static/logo.png
var logo_default$1 = "/sub/static/logo.png";
//#endregion
//#region ../../../../../../../../static/logo.png
var logo_default = "/sub/static/logo.png";
//#endregion
//#region src/pages/index/logo-dc.png
var logo_dc_default = "/sub/assets/logo-dc.759742f5.png";
//#endregion
Object.defineProperty(exports, "logo_dc_default", {
	enumerable: true,
	get: function() {
		return logo_dc_default;
	}
});
Object.defineProperty(exports, "logo_default", {
	enumerable: true,
	get: function() {
		return logo_default;
	}
});
Object.defineProperty(exports, "logo_default$1", {
	enumerable: true,
	get: function() {
		return logo_default$1;
	}
});
Object.defineProperty(exports, "logo_hx_default", {
	enumerable: true,
	get: function() {
		return logo_hx_default;
	}
});
Object.defineProperty(exports, "logo_hx_default$1", {
	enumerable: true,
	get: function() {
		return logo_hx_default$1;
	}
});
"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
@import "../../uvue.wxss";
:host{display:flex;flex-direction:column}

.test {
    background-color: red;
}"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `
":host{display:flex;flex-direction:column}

.test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
@import "../../../../uvue.wxss";
:host{display:flex;flex-direction:column}

.test {
  background-color: red;
}"
`;
